ported Tetrahedron and FlatTetrahedron; redesigned swig customizations for java and native defined classes